--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.cycle2.min.js"></script>
+	<script type="text/javascript" src="js/custom.js"></script>
 </head>
 <body class="home_page">
 	<div class="wrapper">
@@ -47,106 +48,109 @@
 					});
 				});
 			</script>
-			<div class="slider">
-				<div>
-					<a href="#">
-						<div class="img_apartment">
-							<img src="images/img_apartment.jpg" alt="">
-						</div>
-						<h2>Name of apartment</h2>
-						<p class="address_city">City</p>
-						<p class="price">&#8364; 230 000 </p>
-					</a>
-				</div>
-				<div>
-					<a href="#">
-						<div class="img_apartment">
-							<img src="images/img_apartment.jpg" alt="">
-						</div>
-						<h2>Name of apartment</h2>
-						<p class="address_city">City</p>
-						<p class="price">&#8364; 230 000 </p>
-					</a>
-				</div>
-				<div>
-					<a href="#">
-						<div class="img_apartment">
-							<img src="images/img_apartment.jpg" alt="">
-						</div>
-						<h2>Name of apartment</h2>
-						<p class="address_city">City</p>
-						<p class="price">&#8364; 230 000 </p>
-					</a>
-				</div>
-				<div>
-					<a href="#">
-						<div class="img_apartment">
-							<img src="images/img_apartment.jpg" alt="">
-						</div>
-						<h2>Name of apartment</h2>
-						<p class="address_city">City</p>
-						<p class="price">&#8364; 230 000 </p>
-					</a>
-				</div>
-				<div>
-					<a href="#">
-						<div class="img_apartment">
-							<img src="images/img_apartment.jpg" alt="">
-						</div>
-						<h2>Name of apartment</h2>
-						<p class="address_city">City</p>
-						<p class="price">&#8364; 230 000 </p>
-					</a>
-				</div>
-				<div>
-					<a href="#">
-						<div class="img_apartment">
-							<img src="images/img_apartment.jpg" alt="">
-						</div>
-						<h2>Name of apartment</h2>
-						<p class="address_city">City</p>
-						<p class="price">&#8364; 230 000 </p>
-					</a>
-				</div>
-				<div>
-					<a href="#">
-						<div class="img_apartment">
-							<img src="images/img_apartment.jpg" alt="">
-						</div>
-						<h2>Name of apartment</h2>
-						<p class="address_city">City</p>
-						<p class="price">&#8364; 230 000 </p>
-					</a>
-				</div>
-				<div>
-					<a href="#">
-						<div class="img_apartment">
-							<img src="images/img_apartment.jpg" alt="">
-						</div>
-						<h2>Name of apartment</h2>
-						<p class="address_city">City</p>
-						<p class="price">&#8364; 230 000 </p>
-					</a>
-				</div>
-				<div>
-					<a href="#">
-						<div class="img_apartment">
-							<img src="images/img_apartment.jpg" alt="">
-						</div>
-						<h2>Name of apartment</h2>
-						<p class="address_city">City</p>
-						<p class="price">&#8364; 230 000 </p>
-					</a>
-				</div>
-				<div>
-					<a href="#">
-						<div class="img_apartment">
-							<img src="images/img_apartment.jpg" alt="">
-						</div>
-						<h2>Name of apartment</h2>
-						<p class="address_city">City</p>
-						<p class="price">&#8364; 230 000 </p>
-					</a>
+			<div class="slider_box">
+				<div class="slider">
+					<div>
+						<a href="#">
+							<div class="img_apartment">
+								<img src="images/img_apartment.jpg" alt="">
+							</div>
+							<h2>Name of apartment</h2>
+							<p class="address_city">City</p>
+							<p class="price">&#8364; 230 000 </p>
+						</a>
+					</div>
+					<div>
+						<a href="#">
+							<div class="img_apartment">
+								<img src="images/img_apartment.jpg" alt="">
+							</div>
+							<h2>Name of apartment</h2>
+							<p class="address_city">City</p>
+							<p class="price">&#8364; 230 000 </p>
+						</a>
+					</div>
+					<div>
+						<a href="#">
+							<div class="img_apartment">
+								<img src="images/img_apartment.jpg" alt="">
+							</div>
+							<h2>Name of apartment</h2>
+							<p class="address_city">City</p>
+							<p class="price">&#8364; 230 000 </p>
+						</a>
+					</div>
+					<div>
+						<a href="#">
+							<div class="img_apartment">
+								<img src="images/img_apartment.jpg" alt="">
+							</div>
+							<h2>Name of apartment</h2>
+							<p class="address_city">City</p>
+							<p class="price">&#8364; 230 000 </p>
+						</a>
+					</div>
+					<div>
+						<a href="#">
+							<div class="img_apartment">
+								<img src="images/img_apartment.jpg" alt="">
+							</div>
+							<h2>Name of apartment</h2>
+							<p class="address_city">City</p>
+							<p class="price">&#8364; 230 000 </p>
+						</a>
+					</div>
+					<div>
+						<a href="#">
+							<div class="img_apartment">
+								<img src="images/img_apartment.jpg" alt="">
+							</div>
+							<h2>Name of apartment</h2>
+							<p class="address_city">City</p>
+							<p class="price">&#8364; 230 000 </p>
+						</a>
+					</div>
+					<div>
+						<a href="#">
+							<div class="img_apartment">
+								<img src="images/img_apartment.jpg" alt="">
+							</div>
+							<h2>Name of apartment</h2>
+							<p class="address_city">City</p>
+							<p class="price">&#8364; 230 000 </p>
+						</a>
+					</div>
+					<div>
+						<a href="#">
+							<div class="img_apartment">
+								<img src="images/img_apartment.jpg" alt="">
+							</div>
+							<h2>Name of apartment</h2>
+							<p class="address_city">City</p>
+							<p class="price">&#8364; 230 000 </p>
+						</a>
+					</div>
+					<div>
+						<a href="#">
+							<div class="img_apartment">
+								<img src="images/img_apartment.jpg" alt="">
+							</div>
+							<h2>Name of apartment</h2>
+							<p class="address_city">City</p>
+							<p class="price">&#8364; 230 000 </p>
+						</a>
+					</div>
+					<div>
+						<a href="#">
+							<div class="img_apartment">
+								<img src="images/img_apartment.jpg" alt="">
+							</div>
+							<h2>Name of apartment</h2>
+							<p class="address_city">City</p>
+							<p class="price">&#8364; 230 000 </p>
+						</a>
+					</div>
+					
 				</div>
 				<a href="#" class="prev_button"></a>
 				<a href="#" class="next_button"></a>
