--- a/www/inserting-ad-2.html
+++ b/www/inserting-ad-2.html
@@ -5,8 +5,8 @@
 	<title>jeLovejeVends.com</title>
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="js/jquery.ui.selectmenu.js"></script>
+	<script type="text/javascript" src="js/jquery.cycle2.min.js"></script>
+	<script type="text/javascript" src="js/custom.js"></script>
 </head>
 <body>
 	<div class="wrapper">
