--- a/www/single.html
+++ b/www/single.html
@@ -5,8 +5,8 @@
 	<title>jeLovejeVends.com</title>
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="js/jquery.ui.selectmenu.js"></script>
+	<script type="text/javascript" src="js/jquery.cycle2.min.js"></script>
+	<script type="text/javascript" src="js/custom.js"></script>
 </head>
 <body>
 	<div class="wrapper">
@@ -92,11 +92,13 @@
 								<p><a href="" class="prev"></a> 3/4 <a href="" class="next"></a></p>
 							</div>
 						</div>
-						<div class="video_slide">
-							<ul>
-								<li><img src="images/video1.jpg" alt=""></li>
-								<li><img src="images/video2.jpg" alt=""></li>
-							</ul>
+						<div class="slide_box_video">
+							<div class="video_slide">
+								<div><img src="images/video1.jpg" alt=""></div>
+								<div><img src="images/video2.jpg" alt=""></div>
+								<div><img src="images/video1.jpg" alt=""></div>
+								<div><img src="images/video2.jpg" alt=""></div>
+							</div>
 							<a href="#" class="prev"></a>
 							<a href="#" class="next"></a>
 						</div>
@@ -121,19 +123,9 @@
 					</ul>
 				</div>
 				<h3 class="subtitle">Similar ads</h3>
-				<div class="slider slider_three">
-					<ul>
-						<li>
-							<a href="#">
-								<div class="img_apartment">
-									<img src="images/img_apartment.jpg" alt="">
-								</div>
-								<h2>Name of apartment</h2>
-								<p class="address_city">City</p>
-								<p class="price">&euro; 230 000 </p>
-							</a>
-						</li>
-						<li>
+				<div class="slider_box">
+					<div class="slider slider_three">
+						<div>
 							<a href="#">
 								<div class="img_apartment">
 									<img src="images/img_apartment.jpg" alt="">
@@ -142,8 +134,8 @@
 								<p class="address_city">City</p>
 								<p class="price">&#8364; 230 000 </p>
 							</a>
-						</li>
-						<li>
+						</div>
+						<div>
 							<a href="#">
 								<div class="img_apartment">
 									<img src="images/img_apartment.jpg" alt="">
@@ -152,8 +144,88 @@
 								<p class="address_city">City</p>
 								<p class="price">&#8364; 230 000 </p>
 							</a>
-						</li>
-					</ul>
+						</div>
+						<div>
+							<a href="#">
+								<div class="img_apartment">
+									<img src="images/img_apartment.jpg" alt="">
+								</div>
+								<h2>Name of apartment</h2>
+								<p class="address_city">City</p>
+								<p class="price">&#8364; 230 000 </p>
+							</a>
+						</div>
+						<div>
+							<a href="#">
+								<div class="img_apartment">
+									<img src="images/img_apartment.jpg" alt="">
+								</div>
+								<h2>Name of apartment</h2>
+								<p class="address_city">City</p>
+								<p class="price">&#8364; 230 000 </p>
+							</a>
+						</div>
+						<div>
+							<a href="#">
+								<div class="img_apartment">
+									<img src="images/img_apartment.jpg" alt="">
+								</div>
+								<h2>Name of apartment</h2>
+								<p class="address_city">City</p>
+								<p class="price">&#8364; 230 000 </p>
+							</a>
+						</div>
+						<div>
+							<a href="#">
+								<div class="img_apartment">
+									<img src="images/img_apartment.jpg" alt="">
+								</div>
+								<h2>Name of apartment</h2>
+								<p class="address_city">City</p>
+								<p class="price">&#8364; 230 000 </p>
+							</a>
+						</div>
+						<div>
+							<a href="#">
+								<div class="img_apartment">
+									<img src="images/img_apartment.jpg" alt="">
+								</div>
+								<h2>Name of apartment</h2>
+								<p class="address_city">City</p>
+								<p class="price">&#8364; 230 000 </p>
+							</a>
+						</div>
+						<div>
+							<a href="#">
+								<div class="img_apartment">
+									<img src="images/img_apartment.jpg" alt="">
+								</div>
+								<h2>Name of apartment</h2>
+								<p class="address_city">City</p>
+								<p class="price">&#8364; 230 000 </p>
+							</a>
+						</div>
+						<div>
+							<a href="#">
+								<div class="img_apartment">
+									<img src="images/img_apartment.jpg" alt="">
+								</div>
+								<h2>Name of apartment</h2>
+								<p class="address_city">City</p>
+								<p class="price">&#8364; 230 000 </p>
+							</a>
+						</div>
+						<div>
+							<a href="#">
+								<div class="img_apartment">
+									<img src="images/img_apartment.jpg" alt="">
+								</div>
+								<h2>Name of apartment</h2>
+								<p class="address_city">City</p>
+								<p class="price">&#8364; 230 000 </p>
+							</a>
+						</div>
+					</div>
 					<a href="#" class="prev_button"></a>
 					<a href="#" class="next_button"></a>
 				</div>
