update slider on single page

--- a/www/single.html
+++ b/www/single.html
@@ -94,10 +94,10 @@
 						</div>
 						<div class="slide_box_video">
 							<div class="video_slide">
-								<div><img src="images/video1.jpg" alt=""></div>
-								<div><img src="images/video2.jpg" alt=""></div>
-								<div><img src="images/video1.jpg" alt=""></div>
-								<div><img src="images/video2.jpg" alt=""></div>
+								<img src="images/video1.jpg" alt="">
+								<img src="images/video2.jpg" alt="">
+								<img src="images/video1.jpg" alt="">
+								<img src="images/video2.jpg" alt="">
 							</div>
 							<a href="#" class="prev"></a>
 							<a href="#" class="next"></a>
