add style on premium apart add marker for best offer

--- a/www/search-result.html
+++ b/www/search-result.html
@@ -152,81 +152,89 @@
 					</div>
 					<div class="list_apartment">
 						<ul>
-							<li>
-								<p class="time_add">54 min ago</p>
-								<div class="img_search_result">
-									<div class="img_holder">
-										<img src="images/img_result.jpg" alt="">
+							<li class="premium_apart">
+								<div class="list_apart_holder">
+									<p class="time_add">54 min ago</p>
+									<div class="img_search_result">
+										<div class="img_holder">
+											<img src="images/img_result.jpg" alt="">
+										</div>
+										<a href="#">4 photos</a>
 									</div>
-									<a href="#">4 photos</a>
+									<p class="price">&euro; 230 000</p>
+									<p class="address">Name of street</p>
+									<p>Apartment</p>
+									<p>1 price</p>
+									<p>48 m<sup>2</sup></p>
+									<ul class="share_button">
+										<li><img src="images/share_tw.png" alt=""></li>
+										<li><img src="images/share_fb.png" alt=""></li>
+									</ul>
+									<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
 								</div>
-								<p class="price">&euro; 230 000</p>
-								<p class="address">Name of street</p>
-								<p>Apartment</p>
-								<p>1 price</p>
-								<p>48 m<sup>2</sup></p>
-								<ul class="share_button">
-									<li><img src="images/share_tw.png" alt=""></li>
-									<li><img src="images/share_fb.png" alt=""></li>
-								</ul>
-								<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
+							</li>
+							<li class="best_offer">
+								<div class="list_apart_holder">
+									<p class="time_add">54 min ago</p>
+									<div class="img_search_result">
+										<div class="img_holder">
+											<img src="images/img_result.jpg" alt="">
+										</div>
+										<a href="#">4 photos</a>
+									</div>
+									<p class="price">&euro; 230 000</p>
+									<p class="address">Name of street</p>
+									<p>Apartment</p>
+									<p>1 price</p>
+									<p>48 m<sup>2</sup></p>
+									<ul class="share_button">
+										<li><img src="images/share_tw.png" alt=""></li>
+										<li><img src="images/share_fb.png" alt=""></li>
+									</ul>
+									<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
+								</div>
 							</li>
 							<li>
-								<p class="time_add">54 min ago</p>
-								<div class="img_search_result">
-									<div class="img_holder">
-										<img src="images/img_result.jpg" alt="">
+								<div class="list_apart_holder">
+									<p class="time_add">54 min ago</p>
+									<div class="img_search_result">
+										<div class="img_holder">
+											<img src="images/img_result.jpg" alt="">
+										</div>
+										<a href="#">4 photos</a>
 									</div>
-									<a href="#">4 photos</a>
-								</div>
-								<p class="price">&euro; 230 000</p>
-								<p class="address">Name of street</p>
-								<p>Apartment</p>
-								<p>1 price</p>
-								<p>48 m<sup>2</sup></p>
-								<ul class="share_button">
-									<li><img src="images/share_tw.png" alt=""></li>
-									<li><img src="images/share_fb.png" alt=""></li>
-								</ul>
-								<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
+									<p class="price">&euro; 230 000</p>
+									<p class="address">Name of street</p>
+									<p>Apartment</p>
+									<p>1 price</p>
+									<p>48 m<sup>2</sup></p>
+									<ul class="share_button">
+										<li><img src="images/share_tw.png" alt=""></li>
+										<li><img src="images/share_fb.png" alt=""></li>
+									</ul>
+									<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
+								</div>	
 							</li>
 							<li>
-								<p class="time_add">54 min ago</p>
-								<div class="img_search_result">
-									<div class="img_holder">
-										<img src="images/img_result.jpg" alt="">
+								<div class="list_apart_holder">
+									<p class="time_add">54 min ago</p>
+									<div class="img_search_result">
+										<div class="img_holder">
+											<img src="images/img_result.jpg" alt="">
+										</div>
+										<a href="#">4 photos</a>
 									</div>
-									<a href="#">4 photos</a>
+									<p class="price">&euro; 230 000</p>
+									<p class="address">Name of street</p>
+									<p>Apartment</p>
+									<p>1 price</p>
+									<p>48 m<sup>2</sup></p>
+									<ul class="share_button">
+										<li><img src="images/share_tw.png" alt=""></li>
+										<li><img src="images/share_fb.png" alt=""></li>
+									</ul>
+									<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
 								</div>
-								<p class="price">&euro; 230 000</p>
-								<p class="address">Name of street</p>
-								<p>Apartment</p>
-								<p>1 price</p>
-								<p>48 m<sup>2</sup></p>
-								<ul class="share_button">
-									<li><img src="images/share_tw.png" alt=""></li>
-									<li><img src="images/share_fb.png" alt=""></li>
-								</ul>
-								<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
-							</li>
-							<li>
-								<p class="time_add">54 min ago</p>
-								<div class="img_search_result">
-									<div class="img_holder">
-										<img src="images/img_result.jpg" alt="">
-									</div>
-									<a href="#">4 photos</a>
-								</div>
-								<p class="price">&euro; 230 000</p>
-								<p class="address">Name of street</p>
-								<p>Apartment</p>
-								<p>1 price</p>
-								<p>48 m<sup>2</sup></p>
-								<ul class="share_button">
-									<li><img src="images/share_tw.png" alt=""></li>
-									<li><img src="images/share_fb.png" alt=""></li>
-								</ul>
-								<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
 							</li>
 						</ul>
 					</div>
