add banner form, instead of contact the agency use contacter proprietaire on button

--- a/www/search-result.html
+++ b/www/search-result.html
@@ -170,7 +170,7 @@
 										<li><img src="images/share_tw.png" alt=""></li>
 										<li><img src="images/share_fb.png" alt=""></li>
 									</ul>
-									<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
+									<a href="#" class="contact_button search_button"><span>Contacter Proprietaire</span><i></i></a>
 								</div>
 							</li>
 							<li class="best_offer">
@@ -191,7 +191,7 @@
 										<li><img src="images/share_tw.png" alt=""></li>
 										<li><img src="images/share_fb.png" alt=""></li>
 									</ul>
-									<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
+									<a href="#" class="contact_button search_button"><span>Contacter Proprietaire</span><i></i></a>
 								</div>
 							</li>
 							<li>
@@ -212,7 +212,7 @@
 										<li><img src="images/share_tw.png" alt=""></li>
 										<li><img src="images/share_fb.png" alt=""></li>
 									</ul>
-									<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
+									<a href="#" class="contact_button search_button"><span>Contacter Proprietaire</span><i></i></a>
 								</div>	
 							</li>
 							<li>
@@ -233,7 +233,7 @@
 										<li><img src="images/share_tw.png" alt=""></li>
 										<li><img src="images/share_fb.png" alt=""></li>
 									</ul>
-									<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
+									<a href="#" class="contact_button search_button"><span>Contacter Proprietaire</span><i></i></a>
 								</div>
 							</li>
 						</ul>
@@ -253,7 +253,7 @@
 						<li><a href="#" class="contact_ads"><i></i>all ads</a></li>
 						<li><a href="#" class="contact_website"><i></i>website</a></li>
 					</ul>
-					<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
+					<a href="#" class="contact_button search_button"><span>Contacter Proprietaire</span><i></i></a>
 				</aside>
 				<aside>
 					<div class="bg_sidebar"></div>
@@ -283,6 +283,9 @@
 					</ul>
 					<a href="#" class="link_more">all our partners</a>
 				</aside>
+				<div class="site_proposal">
+					<img src="images/banner_image.jpg" alt="">
+				</div>	
 				<aside>
 					<div class="bg_sidebar"></div>
 					<h3 class="subtitle">News</h3>
