--- a/www/empty_form.html
+++ b/www/empty_form.html
@@ -80,11 +80,9 @@
 					</ul>
 					<a href="#" class="link_more">all our partners</a>
 				</aside>
-				<aside>
-					<div class="site_proposal">
-						
-					</div>
-				</aside>
+				<div class="site_proposal">
+					<img src="images/banner_image.jpg" alt="">
+				</div>		
 				<aside>
 					<div class="bg_sidebar"></div>
 					<h3 class="subtitle">News</h3>
