--- a/www/inserting-ad-2.html
+++ b/www/inserting-ad-2.html
@@ -347,6 +347,9 @@
 					</ul>
 					<a href="#" class="link_more">all our partners</a>
 				</aside>
+				<div class="site_proposal">
+					<img src="images/banner_image.jpg" alt="">
+				</div>	
 				<aside>
 					<div class="bg_sidebar"></div>
 					<h3 class="subtitle">News</h3>
