--- a/www/single.html
+++ b/www/single.html
@@ -59,7 +59,7 @@
 					<div class="price_button">
 						<p class="price">&euro; 230 000</p>
 						<p class="view_phone"><a href="#">view phone number</a></p>
-						<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
+						<a href="#" class="contact_button search_button"><span>Contacter Proprietaire</span><i></i></a>
 					</div>
 				</div>
 				<div class="content_holder block_single_bottom">
@@ -102,7 +102,7 @@
 							<a href="#" class="prev"></a>
 							<a href="#" class="next"></a>
 						</div>
-						<p><a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a></p>
+						<p><a href="#" class="contact_button search_button"><span>Contacter Proprietaire</span><i></i></a></p>
 					</div>
 					<div class="col-full diagnosis">
 						<h4>Diagnosis of energy perfomance:</h4>
@@ -243,7 +243,7 @@
 						<li><a href="#" class="contact_ads"><i></i>all ads</a></li>
 						<li><a href="#" class="contact_website"><i></i>website</a></li>
 					</ul>
-					<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
+					<a href="#" class="contact_button search_button"><span>Contacter Proprietaire</span><i></i></a>
 				</aside>
 				<aside>
 					<div class="bg_sidebar"></div>
@@ -273,6 +273,9 @@
 					</ul>
 					<a href="#" class="link_more">all our partners</a>
 				</aside>
+				<div class="site_proposal">
+					<img src="images/banner_image.jpg" alt="">
+				</div>	
 				<aside>
 					<div class="bg_sidebar"></div>
 					<h3 class="subtitle">News</h3>
